@@ -3,12 +3,9 @@ package ru.practicum.user;
 import org.springframework.stereotype.Repository;
 import ru.practicum.exception.DuplicateEmailException;
 import ru.practicum.exception.NotFoundException;
-import ru.practicum.exception.ValidateEmailException;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Repository
 public class UserRepositoryImpl implements UserRepository {
@@ -29,7 +26,7 @@ public class UserRepositoryImpl implements UserRepository {
 
     @Override
     public User get(Long userId) {
-        if(users.get(userId) == null) {
+        if (users.get(userId) == null) {
             throw new NotFoundException("");
         }
         return users.get(userId);
@@ -48,10 +45,7 @@ public class UserRepositoryImpl implements UserRepository {
             }
             oldUser.setEmail(user.getEmail());
         }
-
-        User updatedUser = users.put(oldUser.getId(), oldUser);
-        return updatedUser;
-
+        return users.put(oldUser.getId(), oldUser);
     }
 
     @Override
@@ -61,15 +55,7 @@ public class UserRepositoryImpl implements UserRepository {
 
     @Override
     public List<User> findAll() {
-        return users.values().stream().toList();
-    }
-
-    private long getId() {
-        long lastId = users.values().stream()
-                .mapToLong(User::getId)
-                .max()
-                .orElse(0);
-        return lastId + 1;
+        return new ArrayList<>(users.values());
     }
 
     private Optional<User> searchUserByEmail(String email, Long userId) {
@@ -81,7 +67,10 @@ public class UserRepositoryImpl implements UserRepository {
     }
 
     private boolean validateEmail(User user) {
-        List<User> userList = users.values().stream().filter(x -> x.getEmail().equals(user.getEmail())).toList();
+        List<User> userList = users.values()
+                .stream()
+                .filter(x -> x.getEmail().equals(user.getEmail()))
+                .collect(Collectors.toList());
         return userList.size() > 0;
     }
 }
